--- a/sub/with_yoohyeon_page.html
+++ b/sub/with_yoohyeon_page.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Dream Room">
     <meta property="og:description" content="드림캐쳐와 함께 작업하기 (Work With Dreamcatcher)">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="../img/sns_thum.png">
+    <meta property="og:image" content="../img/sns_thum.png?ver=0922">
 
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -20,7 +20,7 @@
 
     <!-- CSS  -->
     <link href="../css/font.css" rel="stylesheet" />
-    <link href="../css/common.css?ver=091515?ver=0922331212" rel="stylesheet" />
+    <link href="../css/common.css?ver=09222" rel="stylesheet" />
     <link href="../css/reset.css?ver=0907" rel="stylesheet" />
     <link href="../css/sub_one_by_one.css?ver=0902237" rel="stylesheet" />
 
@@ -92,13 +92,13 @@
                     <div class="video-container" style="position: relative; ">
 
                         <!-- 유튜브 썸네일 이미지 -->
-                        <img src="https://img.youtube.com/vi/v4z2SRFDcXY/maxresdefault.jpg" alt="YouTube Thumbnail"
+                        <img src="https://img.youtube.com/vi/g3EmBlq6XVU/maxresdefault.jpg" alt="YouTube Thumbnail"
                             style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;width: 100%;object-position: center center;object-fit: cover;height: 100%;"
                             id="thumbnail">
 
                         <!-- 유튜브 영상 iframe -->
                         <iframe width="560" height="315" id="youtube-video"
-                            src="https://www.youtube.com/embed/v4z2SRFDcXY?autoplay=1&mute=1&playlist=v4z2SRFDcXY&loop=1"
+                            src="https://www.youtube.com/embed/g3EmBlq6XVU?autoplay=1&mute=1&playlist=g3EmBlq6XVU&loop=1"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
