--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>0921_Dream Room </title>
+     <title>Dream Room </title>
 
      <!-- sns 공유 -->
      <meta property="og:site_name" content="Dream Room">
      <meta property="og:title" content="Dream Room">
      <meta property="og:description" content="드림캐쳐와 함께 작업하기 (Work With Dreamcatcher)">
      <meta property="og:type" content="website">
-     <meta property="og:image" content="img/sns_thum.png?ver=0921">
+     <meta property="og:image" content="img/sns_thum.png?ver=0922">
 
      <!-- 파비콘 -->
      <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -20,7 +20,7 @@
 
      <!-- CSS  -->
      <link href="css/font.css" rel="stylesheet" />
-     <link href="css/common.css" rel="stylesheet" />
+     <link href="css/common.css?ver=092222" rel="stylesheet" />
      <link href="css/reset.css" rel="stylesheet" />
 
      <!-- Font awesome icon  -->
@@ -47,20 +47,7 @@
 </head>
 <!-- 
  |￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣|
-
--240920:
-- 영상 모두 유튜브 ifream으로 대체
-- SNS 공유 이미지 제작 00
-
-========================================
--240921 :
-- 깃허브에서 유튜브 영상 연결안되는 부분 해결필요
-- 깃허브에서 sns 공유 이미지 연결 안되는거 해결 필요
-
-========================================
 - 해야될 부분 : 설명버튼 설명 이미지 슬라이드 
-
-
 
  |＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿|
  \ (•◡•) / Update MEMO
@@ -70,23 +57,6 @@
      .side_all {
           box-shadow: 0px 0px 10px #8749F2;
      }
-
-     /* 메인 비디오 비디오 터치 X + 컨트롤 숨기기 */
-     /* video {
-          pointer-events: none;
-     }
-
-     video::-webkit-media-controls {
-          display: none !important;
-     }
-
-     video::-moz-media-controls {
-          display: none !important;
-     }
-
-     video::-ms-media-controls {
-          display: none !important;
-     } */
 </style>
 
 <body>
@@ -235,7 +205,7 @@
                     </li>
 
                     <li class="cam_jiu">
-                         <!-- <div class="video-container" style="position: relative; ">
+                         <div class="video-container" style="position: relative; ">
                               <img src="https://img.youtube.com/vi/3XnnSwl-eYA/maxresdefault.jpg"
                                    alt="YouTube Thumbnail"
                                    style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;width: 100%;object-position: center center;object-fit: cover;height: 100%;"
@@ -247,23 +217,7 @@
                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                    allowfullscreen>
                               </iframe>
-                         </div> -->
-                         <!-- 유튜브 안돼서 test -->
-                         <div class="video-container" style="position: relative; ">
-                              <!-- 유튜브 썸네일 이미지 -->
-                              <img src="https://img.youtube.com/vi/qShkt8cvwGg/maxresdefault.jpg" alt="YouTube Thumbnail"
-                                  style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;width: 100%;object-position: center center;object-fit: cover;height: 100%;"
-                                  id="thumbnail">
-      
-                              <!-- 유튜브 영상 iframe -->
-                              <iframe width="560" height="315" id="youtube-video"
-                                  src="https://www.youtube.com/embed/qShkt8cvwGg?autoplay=1&mute=1&playlist=qShkt8cvwGg&loop=1"
-                                  title="YouTube video player" frameborder="0"
-                                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                  allowfullscreen>
-                              </iframe>
-                          </div>
-
+                         </div>
                          <div class="mute_mic mem_mute_mic"><img src="img/mic_mute.png"></div>
                          <p class="mem_cam_name">🐰지유</p>
                     </li>
@@ -419,7 +373,7 @@
      </script>
 
      <!-- 공통 JS -->
-     <script src="js/index.js?ver=0920"></script>
+     <script src="js/index.js?ver=0922"></script>
 
 </body>
 
