--- a/sub/with_dami_page.html
+++ b/sub/with_dami_page.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Dream Room">
     <meta property="og:description" content="드림캐쳐와 함께 작업하기 (Work With Dreamcatcher)">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="../img/sns_thum.png">
+    <meta property="og:image" content="../img/sns_thum.png?ver=0922">
 
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -20,7 +20,7 @@
 
     <!-- CSS  -->
     <link href="../css/font.css" rel="stylesheet" />
-    <link href="../css/common.css" rel="stylesheet" />
+    <link href="../css/common.css?ver=09222" rel="stylesheet" />
     <link href="../css/reset.css" rel="stylesheet" />
     <link href="../css/sub_one_by_one.css" rel="stylesheet" />
 
@@ -92,13 +92,13 @@
 
                     <div class="video-container" style="position: relative; ">
                         <!-- 유튜브 썸네일 이미지 -->
-                        <img src="https://img.youtube.com/vi/LpOcRDhLnNE/maxresdefault.jpg" alt="YouTube Thumbnail"
+                        <img src="https://img.youtube.com/vi/C41PSewQy4g/maxresdefault.jpg" alt="YouTube Thumbnail"
                             style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;width: 100%;object-position: center center;object-fit: cover;height: 100%;"
                             id="thumbnail">
 
                         <!-- 유튜브 영상 iframe -->
                         <iframe width="560" height="315" id="youtube-video"
-                            src="https://www.youtube.com/embed/LpOcRDhLnNE?autoplay=1&mute=1&playlist=LpOcRDhLnNE&loop=1"
+                            src="https://www.youtube.com/embed/C41PSewQy4g?autoplay=1&mute=1&playlist=C41PSewQy4g&loop=1"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
