--- a/sub/with_siyeon_page.html
+++ b/sub/with_siyeon_page.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Dream Room">
     <meta property="og:description" content="드림캐쳐와 함께 작업하기 (Work With Dreamcatcher)">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="../img/sns_thum.png">
+    <meta property="og:image" content="../img/sns_thum.png?ver=0922">
 
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -20,7 +20,7 @@
 
     <!-- CSS  -->
     <link href="../css/font.css" rel="stylesheet" />
-    <link href="../css/common.css?ver=091515?ver=0922331212" rel="stylesheet" />
+    <link href="../css/common.css?ver=09222" rel="stylesheet" />
     <link href="../css/reset.css?ver=0907" rel="stylesheet" />
     <link href="../css/sub_one_by_one.css?ver=0902237" rel="stylesheet" />
 
