--- a/sub/with_sua_page.html
+++ b/sub/with_sua_page.html
@@ -10,7 +10,7 @@
     <!-- sns 공유 -->
     <meta property="og:site_name" content="Dream Room">
     <meta property="og:title" content="Dream Room">
-    <meta property="og:description" content="드림캐쳐와 함께 작업하기 (Work With Dreamcatcher)">
+    <meta property="og:description" content="드림캐쳐와 함께 집중&힐링하기 (Focus & chill out with Dreamcatcher)">
     <meta property="og:type" content="website">
     <meta property="og:image" content="../img/sns_thum.png?ver=0922">
 
@@ -92,13 +92,13 @@
                     <div class="video-container" style="position: relative; ">
 
                         <!-- 유튜브 썸네일 이미지 -->
-                        <img src="https://img.youtube.com/vi/lo80EwiLWG0/maxresdefault.jpg" alt="YouTube Thumbnail"
+                        <img src="https://img.youtube.com/vi/hcQHKQtgv5s/maxresdefault.jpg" alt="YouTube Thumbnail"
                             style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;width: 100%;object-position: center center;object-fit: cover;height: 100%;"
                             id="thumbnail">
 
                         <!-- 유튜브 영상 iframe -->
                         <iframe width="560" height="315" id="youtube-video"
-                            src="https://www.youtube.com/embed/lo80EwiLWG0?autoplay=1&mute=1&playlist=lo80EwiLWG0&loop=1"
+                            src="https://www.youtube.com/embed/hcQHKQtgv5s?autoplay=1&mute=1&playlist=hcQHKQtgv5s&loop=1"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
