--- a/sub/with_siyeon_page.html
+++ b/sub/with_siyeon_page.html
@@ -10,7 +10,7 @@
     <!-- sns 공유 -->
     <meta property="og:site_name" content="Dream Room">
     <meta property="og:title" content="Dream Room">
-    <meta property="og:description" content="드림캐쳐와 함께 작업하기 (Work With Dreamcatcher)">
+    <meta property="og:description" content="드림캐쳐와 함께 집중&힐링하기 (Focus & chill out with Dreamcatcher)">
     <meta property="og:type" content="website">
     <meta property="og:image" content="../img/sns_thum.png?ver=0922">
 
