--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
      <!-- CSS  -->
      <link href="css/font.css" rel="stylesheet" />
-     <link href="css/common.css" rel="stylesheet" />
+     <link href="css/common.css?ver=0928" rel="stylesheet" />
      <link href="css/reset.css" rel="stylesheet" />
 
      <!-- Font awesome icon  -->
@@ -57,13 +57,11 @@
  |￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣|
 
 -240923
-
 -  설명슬라이드에 한/영 전환버튼 및 기능추가 (위치잡기/JS동작완 -- 일러스트에 있는 내용+번역본 넣어야함)
-        
 
-
-==============================
-- 해야될 부분 :설명버튼 설명 이미지 슬라이드 제작중 (이거 프로그램 이슈부터 해결해야할듯)
+-240928
+- 설명 슬라이드 : 내용+번역본 넣기
+- 한영변환 버튼 터치범위 수정
 
 
  |＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿|
@@ -470,7 +468,7 @@
      <!-- 제이쿼리 쿠키 : 쿠키는 제이쿼리보다 밑에 있어야 동작 -->
 
      <!-- 공통 JS -->
-     <script src="js/index.js"></script>
+     <script src="js/index.js?ver=0928"></script>
 
 
 </body>
