--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
      <!-- CSS  -->
      <link href="css/font.css" rel="stylesheet" />
-     <link href="css/common.css?ver=09299998" rel="stylesheet" />
+     <link href="css/common.css?ver=1001" rel="stylesheet" />
      <link href="css/reset.css" rel="stylesheet" />
 
      <!-- Font awesome icon  -->
@@ -56,20 +56,8 @@
 </head>
 <!-- 
  |￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣￣|
--240929
-- 설명 슬라이드 : 가이드 한/영 설명 넣기 완료 + dark 테마 css수정 완료
-- 한영변환 버튼 터치범위 수정완료
-- 설명 슬라이드 : 설명 이미지 작업완료
-- 외부 작업 깃에 올리기 완료
-- 팝업 떴을때 위에 배경 드레그 안되게 수정완료
-- 가이드 팝업 다시 보는 버튼 넣기완료
-- 포탈열기 완료
-- 깃 리드미 설명작성 완료
-
-
-===해야될 작업
-- sns 공유용 설명이미지 작업 및 글 작성
-- 공유
+-240930~1001
+     -최종게시 및 공유 완료
  |＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿|
  \ (•◡•) / Update MEMO
  -->
@@ -472,7 +460,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
      <!-- 제이쿼리 쿠키 : 쿠키는 제이쿼리보다 밑에 있어야 동작 -->
      <!-- 공통 JS -->
-     <script src="js/index.js?ver=09299998"></script>
+     <script src="js/index.js?ver=1001"></script>
 
 
 </body>
